@@ -1,8 +1,6 @@
 package net.dongliu.byproxy.struct;
 
 
-import com.google.common.collect.ImmutableSet;
-
 import javax.annotation.Nullable;
 import javax.annotation.concurrent.Immutable;
 import java.nio.charset.Charset;
@@ -61,8 +59,8 @@ public class ContentType {
         }
     }
 
-    private Set<String> textTypes = ImmutableSet.of("text");
-    private Set<String> textSubTypes = ImmutableSet.of("json", "x-www-form-urlencoded", "xml", "x-javascript",
+    private Set<String> textTypes = Set.of("text");
+    private Set<String> textSubTypes = Set.of("json", "x-www-form-urlencoded", "xml", "x-javascript",
             "javascript", "html");
 
     public boolean isText() {
